assets/css/style.css
html, body {
    height: 100% ;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    color: #777777 ;

}

body {
    padding-top: 7em ;
    padding-bottom: 2em;
    background-image: url("../images/dark-honeycomb.png") ;
    display: flex ;
    flex-direction: column ;
    
}

h1 {
    font-family: 'Georgia', Times, Times New Roman, serif;
    padding: 5px 20px 10px 20px ;
    font-size: 1.5em ;
    
}
.header {
    width: 100% ;
    top: 0 ;
    left: 0;
    position: fixed;
    background-color: #ffffff ;
    border-bottom: 1px solid #cccccc;
}

.titleBox {
    width : 960px ;
    margin: auto ;
    display: flex ;
    justify-content: space-between ;
    
}

.nameArea {
    font-family: 'Georgia', Times, Times New Roman, serif;
    padding: 0 10px 0 10px;
    color :#ffffff ;
    background-color: #4aaaa5 ; 
}

.linksArea {
    
    display: flex ; 
    align-items: center;

}

.linksArea a {
    padding: 20px ;
    color: #777777;
    text-decoration: none ;
    
}

.linksAreaSmall {
    display: none ;
}

.mainContent {
    border: 1px solid #dddddd ;
    background-color: #ffffff ;
    width: 960px ;
    display: block ;
    z-index: -100 ;
    margin-left: auto ;
    margin-right: auto ;
    flex: 1 0 auto ;
}

.mainContent h1 {
    color: #4aaaa5 ;
    border-bottom: 1px solid #a1a1a1 ;

}

.mainContent p {
    padding: 5px 15px 5px 15px ;
    line-height: 1.5em ;
    
}

form, input {
    width: 90% ;
    height: 1.5em ;
    padding-left: 2em;
}

textarea {
    width: 93% ;
    
}

.pics {
    display: flex;
    flex-wrap: wrap;
    padding-bottom: 20px;
}
.pics img {
    padding: 20px 30px ;
    
    
}

.picwrap {

    position: relative; 
    
}

.picwrap h3 {
    position: absolute;
    top: 0; 
    margin-left: 3em;
    margin-top: 8em;
    width: 80%; 
    background-color: #4aaaa5 ;
 
}

h3 span { 
    position: relative;
    color: white; 
    font-family: 'Georgia', Times, Times New Roman, serif;
    padding: 20px; 
 }


.footer {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    
    background-color: #666666 ;
    border-top: 8px solid #4aaaa5 ;
    text-align: center;
    
 }

 /* MEDIA SCREEN QUERIES FOR MOBILE RESPONSIVENESS */
 @media screen and (max-width: 980px) {
    .header {
        background-color: olive;
    }
    .linksAreaSmall {
        display: none ;
    }
  }

  @media screen and (max-width: 768px) {
    .header {  
        background-color: orange;
    }
    .linksAreaSmall {
        display: none ;
    }
  }

  @media screen and (max-width: 640px) {
    .header {
        background-color: red;
        position: absolute;
    }
    .linksArea {
        display: none;
    }
    .linksAreaSmall {

        background-color: blue;
        display: flex ; 
        align-items: center;
    }

    
    .linksAreaSmall a {
        padding: 20px ;
        color: #777777;
        text-decoration: none ;
        
    }
  }

